WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283391
Missing style invalidation in View Transitions
https://bugs.webkit.org/show_bug.cgi?id=283391
Summary
Missing style invalidation in View Transitions
Simon Fraser (smfr)
Reported
2024-11-19 18:17:45 PST
https://github.com/WebKit/WebKit/pull/22531
causes some broken View Tranistions tests. This PR eliminates spurious RenderStyle diffs, so reveals cases of missing style invalidation.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-19 18:18:07 PST
<
rdar://problem/140244893
>
Simon Fraser (smfr)
Comment 2
2024-11-19 18:47:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36872
EWS
Comment 3
2024-11-20 13:40:04 PST
Committed
286871@main
(a2e838aaa252): <
https://commits.webkit.org/286871@main
> Reviewed commits have been landed. Closing PR #36872 and removing active labels.
Tim Nguyen (:ntim)
Comment 4
2024-11-24 17:47:56 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/49347
EWS
Comment 5
2024-12-03 21:48:03 PST
Committed
283286.558@safari-7620-branch
(85b173a6e8ab): <
https://commits.webkit.org/283286.558@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2369 and removing active labels.
Jonathan Bedard
Comment 6
2024-12-17 16:25:10 PST
***
Bug 283368
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug