Missing style invalidation in View Transitions https://bugs.webkit.org/show_bug.cgi?id=283391 rdar://140244893

Reviewed by Matt Woodrow.

Fixing bug 267252 removes some spurious cases where RenderStyles report as different
when they are actually the same. This reveals missing style invalidation bugs in other
parts of the code.

Here in View Transitions we see that the `capturedInViewTransition` state on a RenderObject
affects whether it makes a RenderLayer (via `requiresRenderingConsolidationForViewTransition()`)
and whether `forceToFlat` is set in StyleAdjuster. So when `capturedInViewTransition` changes,
we need to force a style update on the element.

This fixes css/css-view-transitions/element-stops-grouping-after-animation.html when the patch
for 267252 is applied.

* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/new-content-flat-transform-ancestor.html: slight tolerance increase for intel.
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::setCapturedInViewTransition):
* Source/WebCore/rendering/RenderObject.h:
* Source/WebCore/style/Styleable.cpp:
(WebCore::Styleable::setCapturedInViewTransition):

Canonical link: https://commits.webkit.org/286871@main